--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "canvas": "^2.8.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "johnny-five": "^2.1.0"
   }
 }
